--- a/build.gradle
+++ b/build.gradle
@@ -88,6 +88,16 @@ processResources {
     }
 }
 
+repositories {
+    maven {
+        name "curios"
+        url "https://maven.theillusivec4.top/"
+    }
+}
+
 dependencies {
     minecraft "net.minecraftforge:forge:${project.minecraft_version}-${project.forge_version}"
+	
+    compileOnly fg.deobf("top.theillusivec4.curios:curios-forge:${project.curios_version}:api")
+    runtimeOnly fg.deobf("top.theillusivec4.curios:curios-forge:${project.curios_version}")
 }
