--- a/gradle.properties
+++ b/gradle.properties
@@ -3,7 +3,7 @@
 org.gradle.jvmargs=-Xmx3G
 org.gradle.daemon=false
 
-mod_version = 0.1.1b
+mod_version = 1.0.0
 
 minecraft_version=1.16.3
 mcp_mappings=20200723-1.16.1
