--- a/gradle.properties
+++ b/gradle.properties
@@ -6,7 +6,7 @@ org.gradle.daemon=false
 mod_version = 1.2.5
 
 minecraft_version=1.19
-forge_version=41.0.38
+forge_version=41.1.0
 
-curios_version=1.19-5.1.0.1
-gwr_file=3837094
+curios_version=1.19-5.1.0.4
+gwr_file=1.1.0
