--- a/build.gradle
+++ b/build.gradle
@@ -22,7 +22,7 @@ archivesBaseName = "meetyourfight"
 java.toolchain.languageVersion = JavaLanguageVersion.of(17)
 
 minecraft {
-    mappings channel: 'official', version: '1.19.1'
+    mappings channel: 'official', version: "${project.minecraft_version}"
 
     // Default run configurations.
     runs {
