--- a/src/main/resources/META-INF/mods.toml
+++ b/src/main/resources/META-INF/mods.toml
@@ -7,7 +7,7 @@ license="MIT License https://github.com/Lykrast/MeetYourFight/blob/master/LICENS
 modId="meetyourfight"
 version="${file.jarVersion}"
 displayName="Meet Your Fight"
-displayURL="https://www.curseforge.com/minecraft/mc-mods/meet-your-fight"
+displayURL="https://modrinth.com/mod/meet-your-fight"
 credits="JTK22 for the Haunted Bell texture, Monkey Warhol (www.monkeywarhol.com) for the song Magnum (CC BY 4.0), Guifrog for the song Frog Punch (CC BY 4.0)"
 authors="Lykrast"
 description='''
