--- a/gradle.properties
+++ b/gradle.properties
@@ -5,8 +5,8 @@ org.gradle.daemon=false
 
 mod_version = 1.3.4
 
-minecraft_version=1.19.2
-forge_version=43.2.4
+minecraft_version=1.20.1
+forge_version=47.1.3
 
-curios_version=1.19.2-5.1.1.0
-gwr_file=1.1.1
+curios_version=5.9.1+1.20.1
+gwr_file=2.1.0
